# Ownly_AI

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
apps/web/: .dockerignore  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/login/: page.tsx
apps/web/app/products/: page.tsx
apps/web/app/scanner/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/lib/: api-client.ts  sample-data.ts  utils.ts
docs/: api-runbook.md  engineering-decisions.md  frontend-runbook.md  mvp-scope.md  openapi.yaml  product-architecture.md
infra/: database-schema.sql  deployment.md  production-checklist.md
services/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_initial.py
services/api/app/: __init__.py  main.py
services/api/app/api/: dependencies.py
services/api/app/api/v1/: router.py
services/api/app/api/v1/routes/: analytics.py  auth.py  health.py  products.py  reminders.py  scans.py  search.py  uploads.py  workspaces.py
services/api/app/core/: config.py  security.py
services/api/app/models/: base.py  entities.py
services/api/app/schemas/: analytics.py  auth.py  product.py  reminder.py  scan.py  search.py  upload.py  workspace.py
services/api/app/services/: access.py  ai.py  analytics.py  ocr.py  scanner.py  search.py  seed.py  storage.py
services/api/app/workers/pipelines/: __init__.py  extraction_worker.py
services/api/tests/: test_health.py
(+8 files in other folders)
